fix scrollbars

--- a/client/src/calendar/ReservationCalendar.module.css
+++ b/client/src/calendar/ReservationCalendar.module.css
@@ -25,4 +25,5 @@
 .tableScroller {
     display: flex;
     overflow-x: scroll;
+    overflow-y: hidden;
 }
