--- a/client/src/calendar/ReservationDetails.module.css
+++ b/client/src/calendar/ReservationDetails.module.css
@@ -26,7 +26,7 @@
 }
 
 .item .content {
-    overflow: scroll;
+    overflow: hidden;
     font-size: 16px;
     font-weight: 600;
 }
