--- a/client/src/calendar/ScrollRadioGroup.module.css
+++ b/client/src/calendar/ScrollRadioGroup.module.css
@@ -4,7 +4,8 @@
 
 .inner {
     position: relative;
-    overflow: scroll;
+    overflow-x: scroll;
+    overflow-y: hidden;
 }
 
 .outer::after,
